Upgrade kotlin bytecode target version.