@@ -27,8 +27,8 @@ plugins {
   id 'checkstyle'
   id 'signing'
   id 'com.github.spotbugs' version '4.6.0'
-  id 'org.jetbrains.kotlin.jvm' version '1.3.72'
-  id 'org.jetbrains.kotlin.plugin.spring' version '1.3.72'
+  id 'org.jetbrains.kotlin.jvm'
+  id 'org.jetbrains.kotlin.plugin.spring'
 }
 
 description = "Neuron Server"
@@ -65,7 +65,8 @@ if( N_ARGS == 'null' || N_ARGS == null || N_ARGS == "" ) {
 println "Using java args for running ${projectName}: Xms=" + N_XMS + ",Xmx=" + N_XMX + " -server"
 
 applicationDefaultJvmArgs = [N_XMS, N_XMX, "-server"]
-applicationDefaultJvmArgs += [ "--add-modules", "java.se",
+applicationDefaultJvmArgs += [ "--add-modules", "java.base",
+                               "--add-modules", "java.se",
                                "--add-exports","java.base/jdk.internal.ref=ALL-UNNAMED",
                                "--add-opens","java.base/java.lang=ALL-UNNAMED",
                                "--add-opens","java.base/java.nio=ALL-UNNAMED",
@@ -180,14 +181,26 @@ eclipse {
     ext.targetCompatibility=JavaVersion.VERSION_11
 }
 
-compileKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-        freeCompilerArgs += '-Xjvm-default=compatibility'
-    }
+tasks.withType(JavaCompile) {
+    options.compilerArgs+= [ "--add-modules", "java.base",
+                             "--add-modules", "java.se",
+                             "--add-exports","java.base/jdk.internal.ref=ALL-UNNAMED"]
 }
-compileTestKotlin {
+
+tasks.withType(Test) {
+    jvmArgs += [ "--add-modules", "java.base",
+                 "--add-modules", "java.se",
+                 "--add-exports","java.base/jdk.internal.ref=ALL-UNNAMED",
+                 "--add-opens","java.base/java.lang=ALL-UNNAMED",
+                 "--add-opens","java.base/java.nio=ALL-UNNAMED",
+                 "--add-opens","java.base/sun.nio.ch=ALL-UNNAMED",
+                 "--add-opens","java.management/sun.management=ALL-UNNAMED",
+                 "--add-opens","jdk.management/com.sun.management.internal=ALL-UNNAMED"]
+}
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = "11"
+        freeCompilerArgs += '-Xjvm-default=compatibility'
     }
 }
